// generated by openapi-gen-protobuf

syntax = "proto3";

package erda.openapiv1.onedata; // remove 'openapiv1.' when you make this proto file effective

option go_package = "github.com/erda-project/erda-proto-go/openapiv1/onedata/pb";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";

import "common/openapi.proto";
import "common/identity.proto";

message AtomicIndexDTO {
    google.protobuf.Value extBaseParam = 1;
    string type = 2;
}
message AttrData {
}
message BaseParam {
    string enName = 1;
    string cnName = 2;
    string desc = 3;
}
message BusinessDomainDTO {
    google.protobuf.Value baseParam = 1;
}
message BusinessProcessDTO {
    google.protobuf.Value extBaseParam = 1;
}
message BusinessProcessData {
}
message DataDomainDTO {
    google.protobuf.Value baseParam = 1;
}
message DimDTO {
    google.protobuf.Value extBaseParam = 1;
    repeated google.protobuf.Value relations = 2;
}
message ExtBaseParam {
    google.protobuf.Value baseParam = 1;
    string table = 2;
    string file = 3;
}
message MarketDomainDTO {
    google.protobuf.Value baseParam = 1;
}
message OneDataAnalysisBussProcRequest {
    string filePath = 1;
}
message OneDataAnalysisBussProcResponse {
    google.protobuf.Value data = 1;
}
message OneDataAnalysisBussProcsRequest {
    string remoteUri = 1;
    string businessDomain = 2;
    string dataDomain = 3;
    string keyWord = 4;
    uint32 pageSize = 5;
    uint32 pageNo = 6;
}
message OneDataAnalysisBussProcsResponse {
    google.protobuf.Value data = 1;
}
message OneDataAnalysisDimRequest {
    string filePath = 1;
}
message OneDataAnalysisFuzzyAttrsRequest {
    string filePath = 1;
    string keyWord = 2;
    uint32 pageSize = 3;
    uint32 pageNo = 4;
}
message OneDataAnalysisFuzzyAttrsResponse {
    google.protobuf.Value data = 1;
}
message OneDataAnalysisOutputTablesRequest {
    string remoteUri = 1;
    string businessDomain = 2;
    string marketDomain = 3;
    string keyWord = 4;
    uint32 pageSize = 5;
    uint32 pageNo = 6;
}
message OneDataAnalysisOutputTablesResponse {
    google.protobuf.Value data = 1;
}
message OneDataAnalysisRequest {
    string remoteUri = 1;
}
message OneDataAnalysisResponse {
    google.protobuf.Value data = 1;
}
message OneDataAnalysisStarRequest {
    string filePath = 1;
}
message OneDataAnalysisStarResponse {
    google.protobuf.Value data = 1;
}
message OneDataDTO {
    google.protobuf.Value businessDomain = 1;
    repeated google.protobuf.Value dataDomains = 2;
    repeated google.protobuf.Value marketDomains = 3;
}
message OutputTableData {
}
message RelationDTO {
    string sourceAttr = 1;
    string relAttr = 2;
    bool isPK = 3;
}
message StarDTO {
    repeated google.protobuf.Value dims = 1;
    repeated google.protobuf.Value atomicIndices = 2;
    map<string, google.protobuf.Value> relationGroup = 3;
}
// generate service from openapi spec: onedata
service onedata {
    option (erda.common.openapi_service) = {
        service: "onedata",
    };

    rpc ONEDATA_ANALYSIS (OneDataAnalysisRequest) returns (OneDataAnalysisResponse) {
        option (google.api.http) = {
            get: "/api/analysis",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "解析初始化",
        };
    };
    rpc ONEDATA_ANALYSIS_BUSSPROC (OneDataAnalysisBussProcRequest) returns (OneDataAnalysisBussProcResponse) {
        option (google.api.http) = {
            get: "/api/analysis/businessProcess",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis/businessProcess",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "解析单个业务过程",
        };
    };
    rpc ONEDATA_ANALYSIS_BUSSPROCS (OneDataAnalysisBussProcsRequest) returns (OneDataAnalysisBussProcsResponse) {
        option (google.api.http) = {
            get: "/api/analysis/businessProcesses",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis/businessProcesses",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "解析多个业务过程",
        };
    };
    rpc ONEDATA_ANALYSIS_DIM (OneDataAnalysisDimRequest) returns (OneDataAnalysisDimRequest) {
        option (google.api.http) = {
            get: "/api/analysis/dim",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis/dim",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "解析维度",
        };
    };
    rpc ONEDATA_ANALYSIS_FUZZYATTRS (OneDataAnalysisFuzzyAttrsRequest) returns (OneDataAnalysisFuzzyAttrsResponse) {
        option (google.api.http) = {
            get: "/api/analysis/fuzzyAttrs",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis/fuzzyAttrs",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "模糊查询维度属性",
        };
    };
    rpc ONEDATA_ANALYSIS_OUTPUTTABLES (OneDataAnalysisOutputTablesRequest) returns (OneDataAnalysisOutputTablesResponse) {
        option (google.api.http) = {
            get: "/api/analysis/outputTables",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis/outputTables",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "解析数据集市",
        };
    };
    rpc ONEDATA_ANALYSIS_STAR (OneDataAnalysisStarRequest) returns (OneDataAnalysisStarResponse) {
        option (google.api.http) = {
            get: "/api/analysis/star",
        };
        option (erda.common.openapi) = {
            path: "/api/analysis/star",
            auth: {
                no_check: false,
                check_login: true,
                try_check_login: false,
                check_token: false,
                check_basic_auth: false,
            },
            doc: "解析星型图",
        };
    };
}
